# skill-lint

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  flake.nix
src/: check.rs  error.rs  lib.rs  main.rs  model.rs
src/check/: checkers.rs  fs_source.rs  mod.rs  testing.rs
tests/: cli.rs
